# Operant

./: .codacy.yml  .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  ISSUES_for_me_from_future.md  KairatNurtas  LICENSE  NOTICE  OPERANT_PRODUCTION_AUDIT_STATE.md  OPERANT_PRODUCTION_CODE_EXHAUSTIVE_AUDIT.md  OPERANT_PRODUCTION_CODE_FILE_COVERAGE_MANIFEST.md  OPERANT_PRODUCTION_CODE_TRIAGE.md  OPERANT_PRODUCTION_EXECUTION_STATE.md  OPERANT_PRODUCTION_MASTER_PROMPT.md  ORDERPILOT_CORE_V1_AI_DEV.md  ORDERPILOT_ENTERPRISE_PLATFORM_LAYER.md  PROJECT_STATUS_CHECKPOINT.txt  README.md  SECURITY.md  STAGE_11E_GIT_STATUS_CHECKPOINT.txt  THIRD_PARTY_NOTICES.md  balam11e.txt  stats_git
.codex/: hooks.json
apps/ai-worker/: Dockerfile  README.md  pyproject.toml
apps/ai-worker/orderpilot_ai_worker/: __init__.py  main.py
apps/ai-worker/orderpilot_ai_worker/evaluation/: __init__.py  cases.py  evaluator.py  models.py
apps/ai-worker/orderpilot_ai_worker/extraction/: __init__.py  pipeline.py
apps/ai-worker/orderpilot_ai_worker/jobs/: __init__.py  handler.py  handoff.py  models.py  provider_factory.py  security.py
apps/ai-worker/orderpilot_ai_worker/providers/: llm_provider.py  mock_shadow_mode.py  text_extraction.py
apps/ai-worker/orderpilot_ai_worker/schemas/: extraction_result.py  shadow_mode.py
apps/ai-worker/scripts/: run_stage39d_real_ollama_adversarial.py  write_stage39_evaluation_report.py
apps/ai-worker/tests/: test_process_inbound_document.py  test_process_processing_job.py  test_stage10b_shadow_mode.py  test_stage4_extraction.py
(+2219 files in other folders)
